# KnowledgeManagementSystem

./: .gitignore  ANDROID.md  DESIGN_SPECIFICATION.md  DEVELOPMENT.md  ELECTRON_SETUP.md  README.md  asdf.txt  capture_daemon.py  config-dev.yaml  config-prod.yaml  config.yaml  debug_db.py  flake.nix  geolocation.py  keybindings.py  markdown_writer.py  new_flake.nix  result  run_tests.py  shell.nix  test_imports.py  trigger_capture.py
.github/workflows/: ci.yml
androidApp/: settings.gradle
client/: README.md  index.html  package-lock.json  package.json  shell.nix  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
docs/: REPO_READTHROUGH.md
electron/: main.js  package-lock.json  package.json
scripts/: README.md  perf_report.md  profile_baseline.py  profile_report.py  results_rust.json
server/: ai_suggester.py  app.py  audio_recorder.py  main.db  main_db.py  markdown_writer.py  normalization.py  requirements.txt  result  suggestion_db.py  suggestions.db
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  db.rs  lib.rs  markdown.rs
src-tauri/tests/: api_parity.rs  markdown_frontmatter.rs
tests/: conftest.py  test_api_backend.py  test_app_endpoints.py  test_audio_recording.py  test_capture_flows.py  test_configuration.py  test_daemon_headless.py  test_electron_smoke.py  test_main_config_loading.py  test_main_db.py  test_markdown_writer.py  test_quick_mode.py  test_ui_integration.py  test_ui_visuals.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts
web/src/: App.tsx  (+3 more)
(+33 files in other folders)
