[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
anyhow = "1"
serde_yaml = "0.9"
directories = "5"
shellexpand = "3"
chrono = { version = "0.4", features = ["clock", "std"] }
pathdiff = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
